--- a/game.html
+++ b/game.html
@@ -1,8 +1,9 @@
-<html>
+<html id=background>
     <head>
-        
+       <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
-        
+        <div id=background2>
+        </div>
     </body>
 </html>
