Added defend and attack box

--- a/game.html
+++ b/game.html
@@ -3,7 +3,9 @@
        <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
-        <div id=background2>
+        <div id=background2> 
+            <div id=attack> </div> 
+            <div id=defend> </div>
         </div>
     </body>
 </html>
