Added Defend.png, added Defend.psd, Added Attack font to box

--- a/game.html
+++ b/game.html
@@ -4,8 +4,10 @@
     </head>
     <body>
         <div id=background2> 
-            <div id=attack> </div> 
-            <div id=defend> </div>
+            <div id=attackbox> 
+                <img id=attack src="Design/Attack.png">
+            </div> 
+            <div id=defendbox> </div>
         </div>
     </body>
 </html>
