Added defend font to the defend box

--- a/game.html
+++ b/game.html
@@ -7,7 +7,9 @@
             <div id=attackbox> 
                 <img id=attack src="Design/Attack.png">
             </div> 
-            <div id=defendbox> </div>
+            <div id=defendbox>
+                <img id=defend src="Design/Defend.png">
+            </div>
         </div>
     </body>
 </html>
