--- a/game.html
+++ b/game.html
@@ -3,10 +3,11 @@
        <link rel="stylesheet" type="text/css" href="css.css">
     </head>
     <body>
-        <div id=background2> 
-            <div id=attackbox> 
+        <div id=background2>
+            <div id=attackbox>
+              <img id=attackback src="Design/Attack_Background_Grain.png">
                 <img id=attack src="Design/Attack.png">
-            </div> 
+            </div>
             <div id=defendbox>
                 <img id=defend src="Design/Defend.png">
             </div>
