--- a/game.html
+++ b/game.html
@@ -1,6 +1,8 @@
 <html id=background>
     <head>
        <link rel="stylesheet" type="text/css" href="css.css">
+        <script src="jquery-2.2.2.min.js"> </script>
+        <script type="text/javascript" src="Animation.js"> </script>
     </head>
     <body>
         <div id=background2>
