Worked on Attack animation

--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
             <div id=attackbox>
               <img id=attackback src="Design/Attack_Background_Grain.png">
                 <img id=attack src="Design/Attack.png">
+                <div id= attackholder> <p> yo </p></div>
             </div>
             <div id=defendbox>
                 <img id=defend src="Design/Defend.png">
