Edited Attack animation and created button

--- a/game.html
+++ b/game.html
@@ -1,18 +1,22 @@
 <html id=background>
-    <head>
-       <link rel="stylesheet" type="text/css" href="css.css">
-        <script src="jquery-2.2.2.min.js"> </script>
-        <script type="text/javascript" src="Animation.js"> </script>
-    </head>
-    <body>
-        <div id=background2>
-            <div id=attackbox>
-              <img id=attackback src="Design/Attack_Background_Grain.png">
-                <img id=attack src="Design/Attack.png">
-            </div>
-            <div id=defendbox>
-                <img id=defend src="Design/Defend.png">
-            </div>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="css.css">
+    <script src="jquery-2.2.2.min.js"></script>
+    <script type="text/javascript" src="Animation.js"></script>
+</head>
+
+<body>
+    <div id=background2>
+        <div id=attackbox>
+            <img id=attackback src="Design/Attack_Background_Grain.png">
+            <button onclick="myFunction()" id=attbtn1> Learn More </button>
+            <img id=attack src="Design/Attack.png">
         </div>
-    </body>
+        <div id=defendbox>
+            <img id=defend src="Design/Defend.png">
+        </div>
+    </div>
+</body>
+
 </html>
