Edited attack animation

--- a/game.html
+++ b/game.html
@@ -10,7 +10,8 @@
     <div id=background2>
         <div id=attackbox>
             <img id=attackback src="Design/Attack_Background_Grain.png">
-            <button onclick="myFunction()" id=attbtn1> Learn More </button>
+            <button onclick="attMove()" id=attbtn1> Learn More </button>
+            <button onclick="nextPage()" id=attbtn2> Play </button>
             <img id=attack src="Design/Attack.png">
         </div>
         <div id=defendbox>
