Edited Attack Animation

--- a/game.html
+++ b/game.html
@@ -9,7 +9,12 @@
 <body>
     <div id=background2>
         <div id=attackbox>
+            <p id=attp>The goal of attack mode is to
+                <br> choose and use resources that
+                <br>are available, to capture the
+                <br> map. </p>
             <img id=attackback src="Design/Attack_Background_Grain.png">
+            <div id=attpbox> </div>
             <button onclick="attMove()" id=attbtn1> Learn More </button>
             <button onclick="nextPage()" id=attbtn2> Play </button>
             <img id=attack src="Design/Attack.png">
