Added defend_background to game and modified defend

--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
             <img id=attack src="Design/Attack.png">
         </div>
         <div id=defendbox>
+            <img id=defendback src="Design/Defend_Background.png">
             <img id=defend src="Design/Defend.png">
         </div>
     </div>
