Changed game.html to pre_game.html

--- a/pre_game.html
+++ b/pre_game.html
@@ -13,16 +13,10 @@
             <p id=attp>The goal of attack mode is to
                 <br> choose and use resources that
                 <br>are available, to capture the
-                <br> map. </p>
-            <img id=attackback src="Design/Attack_Background_Grain.png">
+                <br> map. </p> <img id=attackback src="Design/Attack_Background_Grain.png">
             <button onclick="attMove()" id=attbtn1> Learn More </button>
-            <button onclick="nextPage()" id=attbtn2> Play </button>
-            <img id=attack src="Design/Attack.png">
-        </div>
-        <div id=defendbox>
-            <img id=defendback src="Design/Defend_Background.png">
-            <img id=defend src="Design/Defend.png">
-        </div>
+            <button onclick="nextPage()" id=attbtn2> Play </button> <img id=attack src="Design/Attack.png"> </div>
+        <div id=defendbox> <img id=defendback src="Design/Defend_Background.png"> <img id=defend src="Design/Defend.png"> </div>
     </div>
 </body>
 
