--- a/pre_game.html
+++ b/pre_game.html
@@ -15,7 +15,7 @@
                 <br>are available, to capture the
                 <br> map. </p> <img id=attackback src="Design/Attack_Background_Grain.png">
             <button onclick="attMove()" id=attbtn1> Learn More </button>
-            <button onclick="window.location.href='game.html'" id=attbtn2> Play </button> <img id=attack src="Design/Attack.png"> </div>
+            <button onclick="window.location.href='army.html'" id=attbtn2> Play </button> <img id=attack src="Design/Attack.png"> </div>
         <div id=defendbox> <img id=defendback src="Design/Defend_Background.png"> <img id=defend src="Design/Defend.png"> </div>
     </div>
 </body>
