--- a/army.html
+++ b/army.html
@@ -3,11 +3,17 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css.css">
     <script src="jquery-2.2.2.min.js"></script>
-    <script type="text/javascript" src="Animation.js"></script>
+    <script type="text/javascript" src="Animation2.js"></script>
 </head>
 
 <body>
     <img id=armytext src="Design/Army_Text.png">
+    <img onclick="usaClick()" id=usaflag src="Design/flag-of-United-States-of-America.png">
+    <img id=usa src="Design/USA.png">
+    <div id=defbox>
+        <p id=defusa> </p>
+    </div>
+    <button id=togame> Play </button>
 </body>
 
 </html>
