Added animation on army.html, created Tutorial_Map

--- a/army.html
+++ b/army.html
@@ -11,9 +11,10 @@
     <img onclick="usaClick()" id=usaflag src="Design/flag-of-United-States-of-America.png">
     <img id=usa src="Design/USA.png">
     <div id=defbox>
-        <p id=defusa> </p>
+        <p id=defusa>
+            Placeholder </p>
     </div>
-    <button id=togame> Play </button>
+    <button onclick="window.location.href='game.html'" id=togame> Play </button>
 </body>
 
 </html>
